# aisponsor

./: .env  .geo_cache.sqlite3  .gitignore  README.md  analyze_text_files.py  app.py  check_data_files.py  check_size_buckets.py  create_simple_dump.py  deep_analyze.py  diagnose_data_flow.py  diagnose_ml.py  diagnose_ml_clean.py  diagnose_sql_fix.py  emergency-demo-script.py  emergency_diagnostic.py  examine.py  fix_all.py  fix_common_issues.py  fix_company_names.py  geocode_cache.db  load_full_data.py  ml_diagnostic_script.py  optimise_database.py  prepare_all_data.py  prepare_associations_data.py  project_dump_simple.txt  project_tree.txt  pyproject.toml  quick_train_models.py  quick_transfer_sizes.py  requirements.txt  retrain_clustering.py  run_app.py  service.py  setup.py  simple_app.py  slim-project-tree.txt  sponsor_match_20250513.tgz  streamlit_app.py  (+10 more)
.streamlit/: config.toml  secrets.toml
app/: streamlit_app.py
archive/: diagnose_data_flow.py
archive/debug/: debug_report_20250514_182948.json  discover_structure.py  project_structure.json  search_issue_debugger.py
cache/: geocode_cache.sqlite3
data/: associations_geocoded.csv  associations_geocoded_prepared.csv  associations_goteborg_with_coords.csv  associations_optimized.parquet  associations_prepared.csv  bolag_1_500_sorted_with_year.csv  bolag_1_500_sorted_with_year.xlsx  bolag_1_500_with_coords.csv  companies_optimized.parquet  examine.py  gothenburg_associations.csv
debug/: search_issue_debugger.py
golden_goal/: __init__.py
logs/: logger.py
models/: kmeans.joblib  kmeans_large.joblib  kmeans_large_simple.joblib  kmeans_simple.joblib
scripts/: build_associations_csv.py  filter_gothenburg.py  geocode_gothenburg_companies.py
sponsor_match/: __init__.py  app.py  clustering.py  db.py  db_init.py  features.py  ingest_associations.py  service.py
sponsor_match.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  manual_test_checklist.py  test_automated_suite.py  test_clustering.py  test_feature_engineer.py  test_service.py
tools/: analyze_text_files.py  convert_all_xlsx_to_csv.py  create_simple_dump.py  deep_analyze.py  excluded_files.txt  project_dump_selective.txt  project_dump_simple.txt
utils/: check_db.py  generate_sample_data.py  list_project_files.py  setup_database.py  train_clustering_models.py
utils_output/: project_dump.txt  project_dump_part1.txt  project_dump_part2.txt  project_dump_part3.txt  project_dump_part4.txt
(+70 files in other folders)
